--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,14 +44,13 @@ body{
 }
 
 .search{
-    display: inline-block
+    display: inline-block;
     font-size: 150%;
     margin-left: 30%;
 }
 
 .main{
-    display: inline-block
-
+    display: inline-block;
 }
 
 .searchtitle{
