storage buttons fixed and centered. Final commit :)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,10 @@ body {
     margin-top: 4%;
     height: 70%;
 }
+
+#searchBtn {
+    margin-bottom: 0.8%;
+}
   
 .custom-map-control-button {
     background-color: #fff;
